[tool.poetry]
name = "redash-migration"
version = "0.1.0"
description = ""
authors = ["Agnieszka Augustyniak <agnieszka.augustyniak@databricks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
redash-toolbelt = "^0.1.9"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pyspark = "^3.3.2"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pydocstyle = "^6.3.0"
invoke = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
omit = ["tests/*", "**/__init__.py", "tasks.py", "**/main.py"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
import_heading_stdlib = "Standard Library"
import_heading_firstparty = "Our Libraries"
import_heading_thirdparty = "Third Party"


[tool.mypy]
python_version = 3.9
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
exclude = [
  'tests/',
  'tasks\.py'
]
follow_imports = 'silent'
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -vvv --color=yes --cov=. --no-cov-on-fail --cov-report=html --cov-report=term"
markers = ["spark"]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]